# slow32-public

./: .dockerignore  .gitignore  AGENTS.md  BUILD-COMPLETE.md  BUILD-LLVM.md  CHANGELOG.md  CLAUDE.md  Dockerfile.emulator  Dockerfile.toolchain  GEMINI.md  LICENSE  LLVM_BACKEND_WORK_NEEDED.md  Makefile  NOTICE  QUICK-START.md  README-NEW.md  README.md  RELEASE-CHECKLIST.md  RELEASE-NOTES.md  docker-build.sh  slow32cc  sync-to-public.sh  test_increment.c  test_itox.c  test_itox2.c  test_large.c  test_llc.c  test_protection.c  test_puts_minimal.c  test_simple.c  test_simple_print.c  test_simple_puts.c  test_stdlib_new.c  test_stdlib_simple.c  test_strcpy.c  test_wxorx.c
llvm-backend/SLOW32/: CMakeLists.txt  README.md  SLOW32.h  SLOW32.td  SLOW32AsmPrinter.cpp  SLOW32AsmPrinter.h  SLOW32CallingConv.td  SLOW32Features.td  SLOW32FrameLowering.cpp  SLOW32FrameLowering.h  SLOW32ISelDAGToDAG.cpp  SLOW32ISelLowering.cpp  SLOW32ISelLowering.h  SLOW32ISelLoweringCombines.cpp  SLOW32ISelLoweringInlineAsm.cpp  SLOW32ISelLoweringVarargs.cpp  SLOW32InstrFormats.td  SLOW32InstrInfo.cpp  SLOW32InstrInfo.h  SLOW32InstrInfo.td  SLOW32LoadAddrOpt.cpp  SLOW32MCInstLowering.cpp  SLOW32MCInstLowering.h  SLOW32MachineFunctionInfo.cpp  SLOW32MachineFunctionInfo.h  SLOW32Processors.td  SLOW32RegisterInfo.cpp  SLOW32RegisterInfo.h  SLOW32RegisterInfo.td  SLOW32Schedule.td  SLOW32Subtarget.cpp  SLOW32Subtarget.h  SLOW32TargetMachine.cpp  SLOW32TargetMachine.h  STATUS.md  apply-fixes.sh
llvm-backend/SLOW32/MCTargetDesc/: CMakeLists.txt  SLOW32AsmBackend.cpp  SLOW32ELFObjectWriter.cpp  (+10 more)
(+2503 files in other folders)
